Implemented styles and button

--- a/interactivebox.html
+++ b/interactivebox.html
@@ -8,13 +8,18 @@
   </head>
   <body>
     <div id="container">
+      <!-- <div class="heading"> -->
+      <div class="boxLine"></div>
+      <span class="headingContent">INTERACTIVE BOX</span>
+      <!-- </div> -->
+
       <label class="radioboxContainer">
         <input type="radio" name="option" value="1-unit" id="unit-1" />
         <label class="unit" for="unit-1">1 Unit</label>
-        <span class="offer">20% off</span>
+        <span class="offer">10% off</span>
 
         <span class="price">
-          <div class="discountPrice">$24.00 USD</div>
+          <div class="discountPrice">$10.00 USD</div>
           <div class="actualPrice">$24.00 USD</div>
         </span>
 
@@ -60,7 +65,7 @@
         <label class="unit" for="2-unit">2 Unit</label>
         <span class="offer">20% off</span>
         <span class="price">
-          <div class="discountPrice">$24.00 USD</div>
+          <div class="discountPrice">$18.00 USD</div>
           <div class="actualPrice">$24.00 USD</div>
         </span>
         <div class="dropDownSection">
@@ -149,6 +154,13 @@
           </div>
         </div>
       </label>
+      <div class="totalDelivery">
+        <span class="freeDeleivery">Free Delivery</span>
+        <span class="total">Total : $18.00 USD</span>
+      </div>
+      <button class="button">
+        <span class="plus">+</span> <span class="cart">Add to Cart</span>
+      </button>
     </div>
 
     <script src="/interactivebox.js"></script>
