Implemented mediaquery for responsive design and alligned datas

--- a/index.html
+++ b/index.html
@@ -10,17 +10,14 @@
     <div id="container">
       <div class="boxLine"></div>
       <span class="headingContent">INTERACTIVE BOX</span>
-
       <label class="radioboxContainer">
         <input type="radio" name="option" value="1-unit" id="unit-1" />
         <label class="unit" for="unit-1">1 Unit</label>
         <span class="offer">10% off</span>
-
         <span class="price">
           <div class="discountPrice">$10.00 USD</div>
           <div class="actualPrice">$24.00 USD</div>
         </span>
-
         <div class="dropDownSection">
           <span class="dropdownTitle">
             <div class="size">Size</div>
@@ -59,8 +56,8 @@
         </div>
       </label>
       <label class="radioboxContainer">
-        <input type="radio" name="option" value="2-unit" id="2-unit" />
-        <label class="unit" for="2-unit">2 Unit</label>
+        <input type="radio" name="option" value="2-unit" id="unit-2" />
+        <label class="unit" for="unit-2">2 Unit</label>
         <span class="offer">20% off</span>
         <span class="price">
           <div class="discountPrice">$18.00 USD</div>
@@ -106,15 +103,13 @@
 
       <label class="radioboxContainer">
         <div class="legend">MOST POPULAR</div>
-
-        <input type="radio" name="option" value="unit-3" id="unit-3" />
+        <input type="radio" name="option" value="3-unit" id="unit-3" />
         <label class="unit" for="unit-3">3 Unit</label>
         <span class="offer">30% off</span>
         <span class="price">
           <div class="discountPrice">$24.00 USD</div>
           <div class="actualPrice">$24.00 USD</div>
         </span>
-
         <div class="dropDownSection">
           <span class="dropdownTitle">
             <div class="size">Size</div>
