Changed legend ,Media query and javascript file

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interactive Box</title>
-    <link rel="stylesheet" href="interatcivebox.css" type="text/css" />
+    <link rel="stylesheet" href="/interatcivebox.css" type="text/css" />
   </head>
   <body>
     <div id="container">
       <div class="boxLine"></div>
-      <span class="headingContent">INTERACTIVE BOX</span>
+      <span class="headingContent">YAY! it's BOGO</span>
       <label class="radioboxContainer">
         <input type="radio" name="option" value="1-unit" id="unit-1" />
         <label class="unit" for="unit-1">1 Unit</label>
@@ -56,6 +56,10 @@
         </div>
       </label>
       <label class="radioboxContainer">
+        <div class="triangle1"></div>
+        <div class="triangle2"></div>
+        <div class="legend">MOST POPULAR</div>
+
         <input type="radio" name="option" value="2-unit" id="unit-2" />
         <label class="unit" for="unit-2">2 Unit</label>
         <span class="offer">20% off</span>
@@ -102,7 +106,6 @@
       </label>
 
       <label class="radioboxContainer">
-        <div class="legend">MOST POPULAR</div>
         <input type="radio" name="option" value="3-unit" id="unit-3" />
         <label class="unit" for="unit-3">3 Unit</label>
         <span class="offer">30% off</span>
@@ -149,13 +152,14 @@
       </label>
       <div class="totalDelivery">
         <span class="freeDeleivery">Free Delivery</span>
-        <span class="total">Total : $18.00 USD</span>
+        <span class="total">Total: $0.00 USD</span>
       </div>
       <button class="button">
         <span class="plus">+</span> <span class="cart">Add to Cart</span>
       </button>
+      <div class="pumper">@ Powered by Pumper</div>
     </div>
 
-    <script src="interactivebox.js"></script>
+    <script src="/interactivebox.js"></script>
   </body>
 </html>
