--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interactive Box</title>
-    <link rel="stylesheet" href="/interatcivebox.css" type="text/css" />
+    <link rel="stylesheet" href="interatcivebox.css" type="text/css" />
   </head>
   <body>
     <div id="container">
@@ -160,6 +160,6 @@
       <div class="pumper">@ Powered by Pumper</div>
     </div>
 
-    <script src="/interactivebox.js"></script>
+    <script src="interactivebox.js"></script>
   </body>
 </html>
