Changed styles and javascript file

--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
         </div>
       </label>
       <label class="radioboxContainer">
-        <div class="triangle1"></div>
-        <div class="triangle2"></div>
-        <div class="legend">MOST POPULAR</div>
+        <div class="legend"></div>
 
         <input type="radio" name="option" value="2-unit" id="unit-2" />
         <label class="unit" for="unit-2">2 Unit</label>
