--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Interactive Box</title>
+    <title>Yay it's BOGO</title>
     <link rel="stylesheet" href="interatcivebox.css" type="text/css" />
   </head>
   <body>
